--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ body {
 
 .circle {
     margin-left: 50px;
+    margin-top: auto;
     background-image: url("images/act1.jpg");
     background-position-y: -30px;
     background-position-x: -190px;
@@ -62,6 +63,7 @@ body {
 
 .circle1 {
     margin-left: 350px;
+    margin-top: auto;
     background-image: url("images/act2.jpg");
     background-position-y: -40px;
     background-position-x: -170px;
